// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/channels/discord GetChannels when specified destination does exist performs correctly 1`] = `
Object {
  "value": Object {
    "channels": ArrayContaining [
      ObjectContaining {
        "createdAt": Any<Number>,
        "id": Any<String>,
        "name": "announcements",
      },
      ObjectContaining {
        "createdAt": Any<Number>,
        "id": Any<String>,
        "name": "resources",
      },
      ObjectContaining {
        "createdAt": Any<Number>,
        "id": Any<String>,
        "name": "general",
      },
    ],
    "rateLimit": ObjectContaining {
      "bucket": Any<String>,
      "remainingRequests": Any<Number>,
      "remainingRequestsPercentage": Any<Number>,
      "resetAfter": Any<Number>,
      "resetTimestamp": Any<Number>,
      "totalRequests": Any<Number>,
    },
  },
}
`;

exports[`chat/channels/discord GetChannels when specified destination does not exist returns error 1`] = `
Object {
  "error": ObjectContaining {
    "kind": StringMatching /HTTPError/,
    "message": StringMatching /Expected HTTP error/,
    "properties": ObjectContaining {
      "detail": "Unknown Guild",
      "rateLimit": ObjectContaining {
        "bucket": Any<String>,
        "remainingRequests": Any<Number>,
        "remainingRequestsPercentage": Any<Number>,
        "resetAfter": Any<Number>,
        "resetTimestamp": Any<Number>,
        "totalRequests": Any<Number>,
      },
      "title": "Not found",
    },
    "statusCode": Any<Number>,
  },
}
`;
